project(LIBREUCPP_HAL_ATSAMD09 LANGUAGES CXX)
    add_library(${PROJECT_NAME} INTERFACE)
    target_include_directories(${PROJECT_NAME} INTERFACE include/)
    target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_HAL_COMMON_MICROCHIP LIBREUCPP_SETTINGS_ATSAMD09 LIBREUCPP_PERIPH_ATSAMD09)


foreach(PART ATSAMD09C13A ATSAMD09D14A)

    project(LIBREUCPP_HAL_${PART} LANGUAGES CXX)
        add_library(${PROJECT_NAME} INTERFACE)
        target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_NOSYS LIBREUCPP_STARTUP_ATSAMD09 LIBREUCPP_HAL_ATSAMD09)
        target_link_options(${PROJECT_NAME} INTERFACE -T ${PART}.ld)

    project(LIBREUCPP_HAL_${PART}_SEMIHOSTING LANGUAGES CXX)
        add_library(${PROJECT_NAME} INTERFACE)
        target_link_libraries(${PROJECT_NAME} INTERFACE LIBREUCPP_SEMIHOSTING LIBREUCPP_STARTUP_ATSAMD09 LIBREUCPP_HAL_ATSAMD09)
        target_link_options(${PROJECT_NAME} INTERFACE -T ${PART}.ld)
        
endforeach()
